<resources>
    <string name="app_name">Calculator</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="sub">-</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply">*</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="answer">=</string>
    <string name="divide">/</string>
    <string name="leftBracket">(</string>
    <string name="rightBracket">)</string>
    <string name="clear">\u232B</string>
    <string name="mod">%</string>
    <string name="finalAnswer">0</string>
    <string name="clearAll">C</string>
</resources>
