<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/expression"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:textSize="30sp"
        android:textIsSelectable="true"/>

    <TextView
        android:id="@+id/finalAnswer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:text="@string/finalAnswer"
        android:textSize="30sp"
        android:textIsSelectable="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="4">

        <Button
            android:id="@+id/one"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/one"
            android:textSize="30sp" />

        <Button
            android:id="@+id/two"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/two"
            android:textSize="30sp" />

        <Button
            android:id="@+id/three"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/three"
            android:textSize="30sp" />

        <Button
            android:id="@+id/add"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/plus"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="4">

        <Button
            android:id="@+id/four"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/four"
            android:textSize="30sp" />

        <Button
            android:id="@+id/five"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/five"
            android:textSize="30sp" />

        <Button
            android:id="@+id/six"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/six"
            android:textSize="30sp" />

        <Button
            android:id="@+id/sub"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/sub"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="4">

        <Button
            android:id="@+id/seven"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/seven"
            android:textSize="30sp" />

        <Button
            android:id="@+id/eight"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/eight"
            android:textSize="30sp" />

        <Button
            android:id="@+id/nine"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/nine"
            android:textSize="30sp" />

        <Button
            android:id="@+id/multiply"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/multiply"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="4">

        <Button
            android:id="@+id/dot"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/dot"
            android:textSize="30sp" />

        <Button
            android:id="@+id/zero"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/zero"
            android:textSize="30sp" />

        <Button
            android:id="@+id/answer"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/answer"
            android:textSize="30sp" />

        <Button
            android:id="@+id/divide"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/divide"
            android:textSize="30sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="4">

        <Button
            android:id="@+id/leftBracket"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/leftBracket"
            android:textSize="30sp" />

        <Button
            android:id="@+id/rightBracket"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/rightBracket"
            android:textSize="30sp" />

        <Button
            android:id="@+id/clear"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/clear"
            android:textSize="30sp" />

        <Button
            android:id="@+id/clearAll"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/clearAll"
            android:textSize="30sp" />

    </LinearLayout>

</LinearLayout>